codeg/src-tauri/tests/snapshots/parsers_snapshot__cline_list.snap
---
source: tests/parsers_snapshot.rs
expression: summaries
---
[
  {
    "id": "1740825600000",
    "agent_type": "cline",
    "folder_path": "/tmp/demo",
    "folder_name": "demo",
    "title": "ping",
    "started_at": "[ts]",
    "ended_at": "[ts]",
    "message_count": 2,
    "model": "claude-sonnet-4-6",
    "git_branch": null
  }
]
