codeg/src-tauri/tests/snapshots/parsers_snapshot__gemini_list.snap
---
source: tests/parsers_snapshot.rs
expression: summaries
---
[
  {
    "id": "gemini-sess-001",
    "agent_type": "gemini",
    "folder_path": "/Users/test/workspace/demo",
    "folder_name": "demo",
    "title": "ping",
    "started_at": "[ts]",
    "ended_at": "[ts]",
    "message_count": 2,
    "model": "gemini-2.5-pro",
    "git_branch": null
  }
]
