codeg/src-tauri/tests/snapshots/parsers_snapshot__openclaw_list.snap
---
source: tests/parsers_snapshot.rs
expression: summaries
---
[
  {
    "id": "test-agent/openclaw-sess-001/a1",
    "agent_type": "open_claw",
    "folder_path": "/tmp/demo",
    "folder_name": "demo",
    "title": "Hello",
    "started_at": "[ts]",
    "ended_at": "[ts]",
    "message_count": 2,
    "model": null,
    "git_branch": null
  }
]
